cluster/radicale/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radicale
  namespace: radicale
  labels:
    app: radicale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radicale
  template:
    metadata:
      labels:
        app: radicale
    spec:
      containers:
        - name: radicale
          image: ghcr.io/kozea/radicale:3.8.3
          ports:
            - name: radicale
              containerPort: 5232
          volumeMounts:
            - name: config
              mountPath: /etc/radicale/config
              subPath: config
              readOnly: true
            - name: users
              mountPath: /etc/radicale/users
              subPath: users
              readOnly: true
            - name: data
              mountPath: /var/lib/radicale
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: '2'
              memory: 512Mi
      volumes:
        - name: config
          configMap:
            name: radicale
        - name: users
          secret:
            secretName: radicale
        - name: data
          persistentVolumeClaim:
            claimName: data
