cluster/radicale/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radicale
  namespace: radicale
spec:
  ports:
    - name: radicale
      port: 5232
      targetPort: radicale
  selector:
    app: radicale
