cluster/radicale/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: acme
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    haproxy.org/response-set-header: |
      Alt-Svc "h3=\":443\"; ma=86400"
      Cross-Origin-Resource-Policy "same-origin"
      Content-Security-Policy "frame-ancestors 'none'; upgrade-insecure-requests; report-to cf-nel"
      Referrer-Policy "same-origin"
      Strict-Transport-Security "max-age=63072000; includeSubDomains; preload"
      X-Content-Type-Options "nosniff"
  name: radicale
  namespace: radicale
  labels:
    app: radicale
spec:
  ingressClassName: haproxy
  rules:
    - host: radicale.herron.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  name: radicale
    - host: cal.herron.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radicale
                port:
                  name: radicale
  tls:
    - hosts:
        - radicale.herron.dev
        - cal.herron.dev
      secretName: radicale-tls
